--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -5,6 +5,14 @@ metadata:
     app: spring-build-ci
 spec:
   containers:
+    - name: licensefinder
+      image: licensefinder/license_finder
+      command:
+        - cat
+      tty: true
+      volumeMounts:
+        - name: maven
+          mountPath: /root/.m2/
     - name: gradle
       image: gradle:7-jdk17-alpine
       command:
